<resources>
    <string name="app_name">Final</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="or_login_with">OR LOGIN WITH</string>
    <string name="continue_with_google">CONTINUE WITH GOOGLE</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="todo">TODO</string>
    <string name="already_have_an_account_login">ALREADY HAVE AN ACCOUNT? LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="todoq">TODO</string>
    <string name="todo1">TODO</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="or_login_with1">OR LOGIN WITH</string>
    <string name="continue_with_google1">CONTINUE WITH GOOGLE</string>
    <string name="i_have_read_the_privacy_policy">I have read the Privacy Policy</string>
    <string name="get_started">GET STARTED</string>
    <string name="account">Account</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="settings">Settings</string>
    <string name="todo4">TODO</string>
    <string name="choose_the_language">Choose The Language</string>
    <string name="general">General</string>
    <string name="todo5">TODO</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="name1">Name</string>
    <string name="location">Location</string>
    <string name="email1">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_and_login">Account and login</string>
    <string name="th_ng_tin_t_i_kho_n">Thông Tin Tài Khoản</string>
    <string name="log_out">Log Out</string>
    <string name="account_information">Account Information</string>
    <string name="location1">Location</string>
    <string name="email2">Email</string>
    <string name="name2">Name</string>
    <string name="account_option">Account Option</string>
    <string name="edit_profile_information">Edit Profile Information</string>
    <string name="edit_profile_infomation">Edit profile infomation</string>
    <string name="change_picture">Change Picture</string>
    <string name="change_email">Change Email</string>
    <string name="change_name">Change Name</string>
    <string name="apply">Apply</string>
    <string name="change_location">Change Location</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="apply1">Apply</string>
    <string name="settings_screen">Settings Screen</string>
    <string name="change_setting">Change Setting</string>
    <string name="home">Home</string>
    <string name="maps">Maps</string>
    <string name="setting">Setting</string>
    <string name="home4">Home</string>
    <string name="maps4">Maps</string>
    <string name="settings4">Settings</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="maps_fragment">Maps Fragment</string>
    <string name="xin_ch_o">Xin Chào</string>
    <string name="th_ng_tin_c_nh_n">Thông tin cá nhân</string>
    <string name="account1">Account</string>
    <string name="logout1">LogOut</string>
    <string name="t_n">Tên:</string>
    <string name="name3">name</string>
    <string name="email3">Email:</string>
    <string name="email4">email</string>
    <string name="t_n_ng_i_d_ng">Tên Người Dùng:</string>

</resources>