<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/signup">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="TODO"
        app:srcCompat="@drawable/group_6800"
        tools:ignore="ContentDescription,HardcodedText,MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/create_your_account"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

    <EditText
        android:id="@+id/edtname"
        android:layout_width="377dp"
        android:layout_height="48dp"
        android:background="@drawable/rounded_edit_text_background"
        android:fontFamily="@font/acme_regular"
        android:hint="@string/name"
        android:textColorHint="#2E7D32"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.185"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edtemail"
        android:layout_width="377dp"
        android:layout_height="48dp"
        android:background="@drawable/rounded_edit_text_background"
        android:fontFamily="@font/acme_regular"
        android:hint="@string/email"
        android:textColorHint="#2E7D32"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.281" />

    <EditText
        android:id="@+id/edtpass"
        android:layout_width="377dp"
        android:layout_height="48dp"
        android:background="@drawable/rounded_edit_text_background"
        android:fontFamily="@font/acme_regular"
        android:hint="Password"
        android:textColorHint="#2E7D32"
        app:layout_constraintBottom_toBottomOf="parent"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.373"
        tools:ignore="HardcodedText,MissingConstraints" />

    <EditText
        android:id="@+id/edtpassconf"
        android:layout_width="377dp"
        android:layout_height="48dp"
        android:background="@drawable/rounded_edit_text_background"
        android:fontFamily="@font/acme_regular"
        android:hint="Confirm Pasword"
        android:inputType="textPassword"
        android:textColorHint="#2E7D32"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.465"
        tools:ignore="HardcodedText,MissingConstraints" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme_regular"
        android:text="@string/or_login_with1"
        app:layout_constraintBottom_toTopOf="@+id/imageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtpassconf" />


    <Button
        android:id="@+id/imageButton"
        android:layout_width="371dp"
        android:layout_height="58dp"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/google_icon"
        android:fontFamily="@font/acme_regular"
        android:text="@string/continue_with_google1"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.641" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme_regular"
        android:text="@string/i_have_read_the_privacy_policy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.856" />

    <Button
        android:id="@+id/button7"
        android:layout_width="370dp"
        android:layout_height="56dp"
        android:fontFamily="@font/acme_regular"
        android:text="@string/get_started"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96" />

    <ImageView
        android:id="@+id/imgback"
        android:layout_width="56dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039"
        app:srcCompat="@drawable/back3" />

</androidx.constraintlayout.widget.ConstraintLayout>