<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ExtraText">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="167dp"
        android:layout_height="126dp"
        android:layout_marginStart="122dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="122dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image_2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="132dp"
        android:layout_height="41dp"
        android:layout_marginStart="139dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="33dp"
        android:fontFamily="@font/acme_regular"
        android:gravity="center"
        android:text="Welcome"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/email_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="HardcodedText,MissingConstraints" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="380dp"
        android:layout_height="70dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="14dp"
        android:autofillHints=""
        android:background="@drawable/rounded_edit_text_background"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColor="@color/black"
        android:textColorHint="#2E7D32"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/password_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="HardcodedText,MissingConstraints" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="380dp"
        android:layout_height="70dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:background="@drawable/rounded_edit_text_background"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:password="true"
        android:textColor="@color/black"
        android:textColorHint="#2E7D32"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input"
        tools:ignore="Deprecated,MissingConstraints" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="380dp"
        android:layout_height="66dp"
        android:layout_marginStart="7dp"

        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/log_in"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="158dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="6dp"
        android:fontFamily="@font/acme_regular"
        android:text="@string/or_login_with"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <Button
        android:id="@+id/button5"
        android:layout_width="371dp"
        android:layout_height="58dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="105dp"
        android:backgroundTint="@color/white"

        android:drawableStart="@drawable/google_icon"
        android:fontFamily="@font/acme_regular"
        android:text="@string/continue_with_google"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="105dp"
        android:fontFamily="@font/acme_regular"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <ImageView
        android:id="@+id/imgback1"
        android:layout_width="56dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039"
        app:srcCompat="@drawable/back3" />

</androidx.constraintlayout.widget.ConstraintLayout>