<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edit_text_background1"
        android:contentDescription="@string/todo2"
        android:gravity="center_vertical"
        android:onClick="openLanguageSettings"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.869">

        <EditText
            android:id="@+id/currentpass"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_weight="1"
            android:gravity="fill_vertical"
            android:hint="Current Password"

            android:textSize="18sp"
            android:textStyle="bold"

            tools:layout_editor_absoluteX="47dp"
            tools:layout_editor_absoluteY="399dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="91dp"
        android:layout_height="53dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@drawable/back3" />
    <TextView

        android:id="@+id/textView13"
        android:layout_width="383dp"
        android:layout_height="76dp"
        android:fontFamily="@font/inter"
        android:text="@string/edit_profile_infomation"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="169dp"
        android:layout_height="149dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.263"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/button4"
        android:layout_width="148dp"
        android:layout_height="48dp"
        android:background="#000000"
        android:text="@string/change_picture"
        android:textColor="#F0F0EA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.456" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edit_text_background1"
        android:contentDescription="@string/todo2"
        android:gravity="center_vertical"
        android:onClick="openLanguageSettings"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.557">

        <EditText
            android:id="@+id/changename"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_weight="1"
            android:gravity="fill_vertical"
            android:hint="@string/change_name"

            android:textSize="18sp"
            android:textStyle="bold"

            tools:layout_editor_absoluteX="47dp"
            tools:layout_editor_absoluteY="399dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edit_text_background1"
        android:contentDescription="@string/todo2"
        android:gravity="center_vertical"
        android:onClick="openLanguageSettings"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.717"
        tools:ignore="DuplicateIds">

        <EditText
            android:id="@+id/changeemail"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_weight="1"
            android:gravity="fill_vertical"
            android:hint="@string/change_email"

            android:textSize="18sp"
            android:textStyle="bold"

            tools:layout_editor_absoluteX="47dp"
            tools:layout_editor_absoluteY="399dp" />
    </LinearLayout>

    <Button
        android:id="@+id/apply"
        android:layout_width="207dp"
        android:layout_height="48dp"
        android:text="@string/apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

</androidx.constraintlayout.widget.ConstraintLayout>